--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Fylo landing page with two column layout</title>
         <meta charset="utf-8">
-        <link rel="icon" href="img/01_logo-w.png">
+        <link rel="icon" href="img/LOGO.png">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
